[tool.poetry]
name = "kassia-gooey"
version = "0.0.1"
description = "A Quick and Dirty GUI for Exporting Scores in Kassia"
authors = ["t-bullock <5100363+t-bullock@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gooey = "^1.0.8"
kassia = { path = "./kassia/", develop = false }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
